# beauty-drop

./: .env.example  .gitignore  .replit  README.md  capacitor.config.ts  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  replit.md  vercel.json
android/app/: build.gradle
android/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
attached_assets/: Pasted-You-are-helping-me-design-and-build-a-mobile-web-app-ca_1768049908627.txt
client/: index.html  requirements.md
client/src/: App.tsx  index.css  main.tsx
client/src/components/: BottomNav.tsx  ErrorBoundary.tsx  Loader.tsx  OnboardingLayout.tsx  ProductCard.tsx  ReviewSummary.tsx  TrustBadge.tsx
client/src/hooks/: use-drops.ts  use-user.ts
client/src/lib/: queryClient.ts
client/src/pages/: Analytics.tsx  Auth.tsx  Compare.tsx  Digest.tsx  Home.tsx  Notifications.tsx  Onboarding.tsx  ProductDetails.tsx  Search.tsx  Settings.tsx  Wishlist.tsx  not-found.tsx
python_fetcher/: __init__.py  cache.py  fetcher.py  image_verifier.py  main.py  models.py  price_normalizer.py  scraper.py
script/: build-vercel.ts  dump_products.ts
server/: db.ts  index.ts  routes.ts  storage.ts  vercel.ts
server/auth/: googleAuth.ts  index.ts  routes.ts  storage.ts
server/replit_integrations/auth/: replitAuth.ts
server/replit_integrations/batch/: utils.ts
server/services/: articles.ts  cache.ts  deepLinks.ts  imageVerification.ts  perplexity.ts  priceChecker.ts  priceFetcher.ts  reviewSynthesis.ts  trustScore.ts  weeklyDigest.ts
shared/: routes.ts  schema.ts
shared/models/: auth.ts
(+7 files in other folders)
